sumo/tests/sumo/errors/network/node_count/root__node_count__ungiven/errors.sumo
Error: Information about the number of nodes was missing.
Quitting (on error).
